Generic ComboBox. Simplify upateColumnText.
- SSBaseComboBox handles more than Integer/Long.
- Greatly simplify RowSetOps::updateColumnText; add tests.
- In RowSetOps, add info about "N", as in NCHAR, strings.
- ConvertType: add string to bool.
- Also brought in JdbcDataTypeConversionTables.java from an old branch;
  (NOT USED) it's supposed to be a direct representation the the jdbc spec.